Update and rename 2021-01-25-programming-language-python-00.md to 2021-01-25-python-00.md

--- a/_posts/2021-01-25-python-00.md
+++ b/_posts/2021-01-25-python-00.md
@@ -121,17 +121,16 @@ print("JSON Object": json_obj)
 ```
 
 `Python` `JSON` 类型转换对照表：
-```
- Python                                   JSON
- ________________________________________________
-  Dict                                   | Object
-  List, Tuple                            | Array
-  Str                                    | String
-  int, float, int- & float-derived Enums | Number
-  True                                   | true
-  False                                  | false
-  None                                   | null
-```
+
+Python                                  | JSON                  |
+--------------------------------------- | --------------------- |
+ Dict                                   | Object                |
+ List, Tuple                            | Array                 |
+ Str                                    | String                |
+ int, float, int- & float-derived Enums | Number                |
+ True                                   | true                  |
+ False                                  | false                 |
+ None                                   | null                  |
 
 ### *訪問檔案資料*
 
