Update and rename 2021-01-26-playbook-tutorials-00.md to 2021-01-26-playbook-00.md

--- a/_posts/2021-01-26-playbook-00.md
+++ b/_posts/2021-01-26-playbook-00.md
@@ -25,15 +25,15 @@ tasks:
 - name: create user
 user: name="{{ user }}"
 ```
-`playbook` 实现新增一位用户：<br>
+1. `playbook` 实现新增一位用户：<br>
 
-`name` 参数 create user 功能的概述，当执行到后面 (user: nam...)会打印 name 变量的值；<br>
+2. `name` 参数 create user 功能的概述，当执行到后面 (user: nam...)会打印 name 变量的值；<br>
 
-`hosts` 参数指定了对那些主机进行参考；<br>
+3. `hosts` 参数指定了对那些主机进行参考；<br>
 
-`user` 参数指定了使用什么用户登录远程主机操作；<br>
+4. `user` 参数指定了使用什么用户登录远程主机操作；<br>
 
-`gather_facts` 参数指定了在以下任务部分执行前，是否先执行setup模块获取主机相关信息，这在后面的task会使用到setup获取的信息时用到；<br>
+5. `gather_facts` 参数指定了在以下任务部分执行前，是否先执行setup模块获取主机相关信息，这在后面的task会使用到setup获取的信息时用到；<br>
 
-`vars` 参数，指定了变量，这里指字一个user变量，其值为test ，需要注意的是，变量值一定要用引号引住；<br>
+6.`vars` 参数，指定了变量，这里指字一个user变量，其值为test ，需要注意的是，变量值一定要用引号引住；<br>
 
