--- a/_posts/2021-03-02-lab-sharp2.md
+++ b/_posts/2021-03-02-lab-sharp2.md
@@ -177,3 +177,5 @@ passwd: password expiry information changed.
     -s 执行环境变数中的 SHELL 所指定的 shell ，或是 /etc/passwd 里所指定的 shell
     -H 将环境变数中的 HOME （家目录）指定为要变更身份的使用者家目录（如不加 -u 参数就是系统管理者 root ）
     command 要以系统管理者身份（或以 -u 更改为其他人）执行的指令
+
+Last edited in 03022021 11:04 AM
