Update and rename 2021-06-04-c-talk.md to 2021-06-23-c-talk.md

--- a/_posts/2021-06-23-c-talk.md
+++ b/_posts/2021-06-23-c-talk.md
@@ -3,6 +3,7 @@ layout: post
 author: Wick Jr.
 title: How modify "char * and char **" - IN THE C
 ---
+**Pointer ot Pointer is not a joke**
 
 `m_str.c`
 ```c
