Update and rename 2021-06-23-c-talk.md to 2021-07-15-c-talk.md

--- a/_posts/2021-07-15-c-talk.md
+++ b/_posts/2021-07-15-c-talk.md
@@ -25,7 +25,7 @@ mstr.c:16:11: warning: format ‘%s’ expects argument of type ‘char *’, bu
        |          char *
        |         %d
 ```
-如果我们换成 '%d' 又会发生什么呢，没错一定会编译过
+如果我们换成 '%d' 又会发生什么呢，没错一定会编译过，运行下去一定也会是一个数字
 ```c
 void n_str(char *str)
 {
